Add method ping to verify the connection to the DB
