# internal/server/fiber_server.go
@@ -33,6 +33,7 @@ func NewFiberServer(urlController *controller.FiberURLController) *fiber.App {
 
 	app.Get("/swagger/*", swagger.HandlerDefault)
 
+	app.Get("/ping", urlController.GetDBPing)
 	app.Get("/:id", urlController.HandleGet)
 	app.Post("/", urlController.HandlePost)
 
